--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -5439,8 +5439,8 @@ step (a big 50 ml tube for each step)\\
 \item[\done]{Start alpha count $\boxed{9\ ChipII}$}
 \item[\done]{Stop alpha count $\boxed{9\ ChipII}$}
 \item[\done]{Start alpha count $\boxed{10\ ChipII}$}
-\item{Stop alpha count $\boxed{10\ ChipII}$}
-\item{Start alpha count $\boxed{8\ Aq\ ChipII}$}
+\item[\done]{Stop alpha count $\boxed{10\ ChipII}$}
+\item[\done]{Start alpha count $\boxed{8\ Aq\ ChipII}$}
   
 \item[\done]{Stop gamma count for $\boxed{8\ aqB\ tot}$}
 \item[\done]{Start gamma count $\boxed{9\ aqB\ tot}$}
@@ -5448,8 +5448,26 @@ step (a big 50 ml tube for each step)\\
 
 \textbf{Analyze Results}
 
-Modified alpha spec program to calculate Cm.
-Analyzed magic concentration for Pu.
+\begin{todolist}
+\item[\done]{Modified alpha spec program to calculate Cm.}
+  \begin{itemize}
+  \item{Bad results, but wasn't expecting much}
+  \end{itemize}
+\item[\done]{Analyzed magic concentration for Pu.}
+  \begin{itemize}
+  \item{Dilute Paul's solution by a factor of 200}
+  \end{itemize}
+\end{todolist}
+
+\experiment{CHEMLAB}
+
+Set up stuff for CHEM lab next week. (prelab, presentations, grading, blah)
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Sunday January 22, 2017}
 
 Finish proposal
 
