--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -5469,7 +5469,84 @@ Set up stuff for CHEM lab next week. (prelab, presentations, grading, blah)
 
 \labday{Sunday January 22, 2017}
 
-Finish proposal
+\experiment{Alpha_and_MassSpec}
+
+\textbf{Counting Alpha}
+\begin{todolist}
+\item[\done]{Stop alpha count $\boxed{8\ Aq\ ChipII}$}
+\item[\done]{Start alpha count $\boxed{10\ Aq\ ChipII}$}
+  \begin{itemize}
+  \item{The results from the alpha counts still have large tails, no good!}
+  \end{itemize}
+\end{todolist}
+
+\textbf{Create alpha sample of $\boxed{8\ Aq}$ that is diluted again, maybe it will
+        have good tails (third dilution of 8)}
+\begin{todolist}
+\item[\done]{- $\boxed{8\ aq}$}
+\end{todolist}
+\begin{center}
+  300+/-6 $\mu$l of $\boxed{8\ aq\ DilutionII}$
+  (0 M HNO\tsbs{3})\\
+  +\\
+  300+/-6 $\mu$l of DI water (leftover in glovebox)\\
+  =\\
+  0.6+/-0.0084 ml of $\sim$
+  0 M HNO\tsbs{3} $\boxed{8\ aq\ DilutionII}$
+\end{center}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8\ aq\ Dilution3}$ dropped onto
+  $\boxed{8\ Aq\ Chip3}$
+\end{center}
+\begin{todolist}
+\item[\done]{Let $\boxed{8\ aq\ Chip3}$ Dry}
+\item[\done]{Stop count of $\boxed{10\ Aq\ ChipII}$ (looked terrible anyway)}
+\item[\done]{Start count of $\boxed{8\ Aq\ Chip3}$}
+  \begin{itemize}
+  \item{This count doesn't look too good either, I'm breaking sabbath  so I am leaving,
+    Tomorrow after office hours I will dilute the sample once more}
+  \end{itemize}
+\end{todolist}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Monday January 23, 2017}
+
+\textbf{Create 4th dilution sample}
+\begin{todolist}
+\item{- $\boxed{8\ aq}$}
+\end{todolist}
+\begin{center}
+  100+/-3 $\mu$l of $\boxed{8\ aq\ Dilution3}$
+  (0 M HNO\tsbs{3})\\
+  +\\
+  100+/-3 $\mu$l of DI water (leftover in glovebox)\\
+  =\\
+  0.2+/-0.004 ml of $\sim$
+  0 M HNO\tsbs{3} $\boxed{8\ aq\ Dilution4}$
+\end{center}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8\ aq\ Dilution4}$ dropped onto
+  $\boxed{8\ Aq\ Chip4}$
+\end{center}
+\begin{todolist}
+\item{Let $\boxed{8\ aq\ Chip4}$ Dry}
+\item{Stop count of $\boxed{8\ Aq\ Chip3}$ (looked terrible anyway)}
+\item{Start count of $\boxed{8\ Aq\ Chip4}$}
+  \begin{itemize}
+  \item{Dear Lord, Please let this work}
+  \end{itemize}
+\end{todolist}
+
+\textbf{Proposal work - while sample drys and while at office hours}
+\begin{todolist}
+\item{List out all the things you want to put into your dissertation}
+\item{Come up with a unifying theme}
+\item{Write up the proposal}
+\end{todolist}
+
 
 
 %----------------------------------------------------------------------
