--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -5514,17 +5514,17 @@ Set up stuff for CHEM lab next week. (prelab, presentations, grading, blah)
 
 \labday{Monday January 23, 2017}
 
-\textbf{Create 4th dilution sample}
+\textbf{Create 4th dilution sample - Did all this in the glove box}
 \begin{todolist}
-\item{- $\boxed{8\ aq}$}
+\item[\done]{- $\boxed{8\ aq}$}
 \end{todolist}
 \begin{center}
   100+/-3 $\mu$l of $\boxed{8\ aq\ Dilution3}$
   (0 M HNO\tsbs{3})\\
   +\\
-  100+/-3 $\mu$l of DI water (leftover in glovebox)\\
+  300+/-3 $\mu$l of DI water (leftover in glovebox)\\
   =\\
-  0.2+/-0.004 ml of $\sim$
+  0.5+/-0.004 ml of $\sim$
   0 M HNO\tsbs{3} $\boxed{8\ aq\ Dilution4}$
 \end{center}
 \begin{center}
@@ -5532,13 +5532,35 @@ Set up stuff for CHEM lab next week. (prelab, presentations, grading, blah)
   $\boxed{8\ Aq\ Chip4}$
 \end{center}
 \begin{todolist}
-\item{Let $\boxed{8\ aq\ Chip4}$ Dry}
-\item{Stop count of $\boxed{8\ Aq\ Chip3}$ (looked terrible anyway)}
-\item{Start count of $\boxed{8\ Aq\ Chip4}$}
+\item[\done]{Let $\boxed{8\ aq\ Chip4}$ Dry}
+\item[\done]{Stop count of $\boxed{8\ Aq\ Chip3}$ (looked terrible anyway)}
+\item[\done]{Start count of $\boxed{8\ Aq\ Chip4}$}
   \begin{itemize}
   \item{Dear Lord, Please let this work}
   \end{itemize}
 \end{todolist}
+
+\textbf{Hypotheses for why I am getting more counts than I expect from first extraction alpha}
+
+I think I am getting more counts because even when I subtract as many counts as possible
+and attribute them to \tss{241}Am, I still have too much plutonium.
+\begin{itemize}
+\item{Something wrong with experiment}
+\item{HM on bottom of TBP}
+\item{Uranium Backround in alpha}
+\item{Spalation (causing multiple hits)}
+\item{Calculating dilution factor incorrectly (I don't think I am)}
+\item{Maybe sodium nitrite isn't working well, and I really only extracted
+  a small portion of the plutonium}
+\end{itemize}
+
+\textbf{Calculation for converting gamma spec to closet solution}
+\begin{equation*}
+\frac{2.5ml}{0.4ml}\cdot10=62.5\ \text{Factor used}
+\end{equation*}
+
+\textbf{Used above calculation along with similiar for alpha and mass to make a list
+  of elements and their closet solution masses at certain dates}\\~\\
 
 \textbf{Proposal work - while sample drys and while at office hours}
 \begin{todolist}
