--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -5514,6 +5514,8 @@ Set up stuff for CHEM lab next week. (prelab, presentations, grading, blah)
 
 \labday{Monday January 23, 2017}
 
+\experiment{Alpha_and_MassSpec}
+
 \textbf{Create 4th dilution sample - Did all this in the glove box}
 \begin{todolist}
 \item[\done]{- $\boxed{8\ aq}$}
@@ -5567,6 +5569,152 @@ and attribute them to \tss{241}Am, I still have too much plutonium.
 \item{List out all the things you want to put into your dissertation}
 \item{Come up with a unifying theme}
 \item{Write up the proposal}
+\end{todolist}
+
+
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Tuesday January 24, 2017}
+
+\experiment{Alpha_and_MassSpec}
+
+
+\textbf{Lets look at all the samples one after another}
+
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+\includegraphics[width=0.9\linewidth]{Figures/Dilution1_Sample8}
+\end{center}
+\caption{Dilution factor of 40 Sample 8 first extraction}
+\label{fig:example_figure}
+\end{figure}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+\includegraphics[width=0.9\linewidth]{Figures/Dilution2_Sample8}
+\end{center}
+\caption{Dilution factor of 160 Sample 8 first extraction}
+\label{fig:example_figure}
+\end{figure}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+\includegraphics[width=0.9\linewidth]{Figures/Dilution3_Sample8}
+\end{center}
+\caption{Dilution factor of 320 Sample 8 first extraction}
+\label{fig:example_figure}
+\end{figure}
+
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+\includegraphics[width=0.9\linewidth]{Figures/Dilution4_Sample8}
+\end{center}
+\caption{Dilution factor of 1600 Sample 8 first extraction}
+\label{fig:example_figure}
+\end{figure}
+
+\textbf{What the heck is the third peak?! Why energy shift?!}
+
+This is troubling, very troubling. I spent the most of the rest of
+the day trying to figure this out. I am not sure what it is.
+
+\experiment{CHEMLAB}
+
+Taught two classes today of CHEM Lab, which is technically 6 hours
+of my day, should count for something.
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Wednesday January 25, 2017}
+
+\experiment{Alpha_and_MassSpec}
+
+Spent most of the morning trying again to figure out what
+is going on in the peaks, to no avail. Last night I was
+feeling restless, so I wrote a program to parse and organize
+data from the yellow site to help with this problem,
+the program helped me organize alpha information, but I still
+don't know what is going on.
+
+\experiment{ResearchMeeting}
+
+Worked on powerpoint to get information for the research meeting,
+maybe others will know what is going on...\\~\\
+
+They didn't, but we have some good things to work on moving forward
+
+\begin{itemize}
+\item{Alpha counts for back extraction}
+\item{Redo calculation form mass spec}
+\item{Redo calculation with assumptions on Am241}
+\item{Look up alpha information}
+\item{Check with UV vis to see which oxidation state Pu is in}
+\item{Contact MURR for mass spec}
+\end{itemize}
+
+\textbf{Work after meeting}
+
+
+\experiment{Alpha_and_MassSpec}
+
+\begin{todolist}
+\item[\done]{Make sample of $\boxed{8\ BExI\ Dilution}$ by dropping
+  10 $\mu$l of $boxed{8\ BExI\ Dilution}$ onto $\boxed{8\ BExI\ Chip}$}
+\item[\done]{Let above chip dry}
+\item[\done]{Start count of $\boxed{8\ BExI\ Chip}$}
+\item[\done]{Look into Mass spec calculations, because there were accusations
+  against how I calculated it, don't forget what the Dilution factor is}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Thursday January 26, 2017}
+
+\experiment{Alpha_and_MassSpec}
+
+\begin{todolist}
+\item[\done]{Look into alpha spectrum from $\boxed{8\ BExI\ Chip}$, 4 peaks now
+  (WTF!!)}
+\item[\done]{Redid calculations for \tss{241}Am, and now need to redo alpha}
+\end{todolist}
+
+
+\experiment{CHEMLAB}
+
+Taught one classes today of CHEM Lab and did lab practice for next week
+, which is technically 6 hours
+of my day, should count for something.
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Friday January 27, 2017}
+
+\experiment{Alpha_and_MassSpec}
+
+\begin{todolist}
+\item[\done]{Switchhed out alpha count $\boxed{8\ BExI\ Chip}$, to do a background}
+\item[\done]{Started a background count for alpha to see if we have that as a problem}
+  \begin{itemize}
+  \item{Not a problem}
+  \end{itemize}
+\item[\done]{Recount a second dilution series (of the glovebox solution), to
+  see if we have energy drift in the calibration}
 \end{todolist}
 
 
