--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -5715,7 +5715,44 @@ of my day, should count for something.
   \end{itemize}
 \item[\done]{Recount a second dilution series (of the glovebox solution), to
   see if we have energy drift in the calibration}
+\item[\done]{Explain the problem to Jason (who is smarter than me) and ask
+  what he thinks, below are some things he brought up}
+  \begin{itemize}
+  \item{The ``bad'' spectrum is more of what we would expect, and the other
+    ``good'' spectrum looks bad}
+  \item{Maybe the more concentrated solutions shifted to the right because
+    of coincidence with gamma rays (both FP and from alpha decay) - note that
+    alpha decays usually instantly produce gamma rays}
+  \item{Maybe there was drift in the detector while it was running}
+  \item{The first set of samples had the detector running for a while, while the second didn't
+    or vice versa}
+  \end{itemize}
+\item[\done]{Started recount of the solution that was diluted a factor of 320,
+  to compare to the solution that was diluted to a factor for 1600, so they
+  would have approximately the same number of counts}
+\item[\done]{Summarized differences between mine and Matt's calculations,
+  to show that I am not crazy in my mass spec, and to show that Matt's is probably wrong,
+  at least with his density assumption}
 \end{todolist}
+
+\textbf{How many tons of material do we have?}
+\begin{equation*}
+0.0129g\cdot\frac{1ton}{10^6\ g}\cdot\frac{0.5\ ml}{5.167\ ml}\cdot\frac{0.4\ ml}{2.5\ ml}
+\end{equation*}
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Sunday January 29, 2017}
+
+\experiment{Alpha_and_MassSpec}
+
+\textbf{Expected Counts from Am241}
+\begin{equation*}
+  \frac{\text{Mass in Vial}}{\text{Dilution Factor}\cdot\text{Volume in Vial}}\cdot
+  \frac{\text{Na}}{\text{M}}\cdot\lambda\cdot\epsilon
+\end{equation*}
 
 
 
