--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -5976,8 +5976,11 @@ Taught 3 hours, did training for 3 hours, and worked on prelab
 \experiment{Grad}
 
 \begin{todolist}
-\item{Calculate out when I will graduate and tell hiring person that is when
+\item[\done]{Calculate out when I will graduate and tell hiring person that is when
   I will start}
+  \begin{itemize}
+  \item{Probably the week of June 5th}
+  \end{itemize}
 \item{Write 3 pages of proposal}
 \end{todolist}
 
