--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -5959,7 +5959,7 @@ Taught 6 hours of lab today
 %	LAB BOOK day
 %---------------------------------------------------------------
 
-\labday{Thursday February 1, 2017}
+\labday{Thursday February 2, 2017}
 
 
 \experiment{CHEMLAB}
@@ -5981,7 +5981,119 @@ Taught 3 hours, did training for 3 hours, and worked on prelab
   \begin{itemize}
   \item{Probably the week of June 5th}
   \end{itemize}
+\item[\done]{Email Alexis about this starting date}
 \item{Write 3 pages of proposal}
+\end{todolist}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Friday February 3, 2017}
+
+\experiment{Grad}
+
+\begin{todolist}
+\item[\done]{Write proposal}
+\end{todolist}
+\textbf{Some things that came up while writing proposal}
+\begin{itemize}
+\item{What about different fast-to-thermal ratios, thermal-fast-epi,
+  3 group, x-sections, compare to reactor types}
+\item{Note that Jeremy's methodology works on all the waste solutions}
+\item{Notes for paper and things already written but not included in paper}
+  \begin{itemize}
+  \item{Ru106, depletion Error}
+  \item{attribution indicators, clue}
+  \end{itemize}
+\end{itemize}
+\textbf{Depletion References Descriptions}
+\begin{itemize}
+\item{Reference 1}
+  \begin{itemize}
+  \item{BWR and PWR framework (zwermann)}
+  \item{GRS sampling - I would probably use the same (XSUSA$\rightarrow$TRITON$\rightarrow$Scale)}
+  \item{K$_\infty$, $\sigma$, with inventory $\sigma$}
+  \item{Importance dudes}
+  \end{itemize}
+\item{Reference 2}
+  \begin{itemize}
+  \item{PWR Framework (Rochman) - Neverlands 2013}
+  \item{Fast Total Monte Carlo, X-sections randomized}
+  \item{SERPENT, K$_\infty$, RR, 2-group x-section}
+  \item{Inventory, local pin power density, peturb and run through calculation}
+  \item{TALLYS - nuclear reaction code - Random Nuclear data}
+  \end{itemize}
+\item{Reference 3}
+  \begin{itemize}
+  \item{Monte Carlo slow, two group, 2014}
+  \item{Neutron spectrum variations}
+  \item{Prepackaged, Fast Systems, Scale X-sections}
+  \item{One Group or multigroup}
+  \end{itemize}
+\item{Reference 4}
+  \begin{itemize}
+  \item{Uncertainty Analysis Applied to fuel}
+  \item{Depletion Calculations}
+  \item{Statistical Approach}
+  \item{CASMO-4 experimental data, MOX fuel}
+  \end{itemize}
+\item{Multiphysics nuclear reactor core depletion}
+\item{I want to follow reference 2}
+  \begin{itemize}
+  \item{Unique x-sections, BC unique flux values}
+  \end{itemize}
+\end{itemize}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Sunday February 5, 2017}
+
+\begin{todolist}
+\item[\done]{Update notes for the week}
+\end{todolist}
+
+
+\experiment{CHEMLAB}
+
+\begin{todolist}
+\item[\done]{Start lab for next week}
+\end{todolist}
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+
+\labday{Monday February 6, 2017}
+
+\experiment{CHEMLAB}
+
+\begin{todolist}
+\item{Finish notes for lab}
+\item{Office hours in the morning}
+\end{todolist}
+
+\experiment{Grad}
+
+\begin{todolist}
+\item{Assume constant flux or a monte carlo flux}
+\item{What solutions do I need mass spec on}
+\end{todolist}
+
+
+
+\experiment{Alpha_and_MassSpec}
+\begin{todolist}
+\item{Start product counts to see about how much Pu we are getting}
+\item{Make Notes for which alpha samples to make to finish experiments}
 \end{todolist}
 
 
